# myPM

./: .gitignore  .release-notes-v0.4.0.md  LICENSE  README.md  USAGE.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  council.md
.claude/agents/: adversarial-reviewer.md  principal-engineer.md  research-engineer.md
.claude/commands/: enrich-drafts.md
.claude/docs/agents/: performance-engineer.md  research-engineer.md
.claude/docs/architecture/: capture.md
.github/workflows/: test.yml
knowledge/: meta.yml
knowledge/.metrics/: recall_log.jsonl
knowledge/edges/: decision_capture_from_ai_sessions_is_guaranteed--relates_to--project_mypm.yml  decision_discover_the_knowledge_root_by_walking--relates_to--project_mypm.yml  decision_retrieval_is_lexical_first_semantic_embeddings--relates_to--project_mypm.yml  decision_review_fill_saves_evidence_backed_fields--relates_to--project_mypm.yml  decision_store_nodes_as_markdown_files_and--relates_to--project_mypm.yml  lesson_a_cwd_relative_default_root_made--motivates--decision_discover_the_knowledge_root_by_walking.yml  lesson_a_cwd_relative_default_root_made--relates_to--project_mypm.yml  lesson_bootstrap_on_scipy_typed_40_percent--relates_to--project_mypm.yml  lesson_conventional_commit_prefixes_blinded_every_anchored--relates_to--project_mypm.yml  lesson_the_free_bootstrap_pass_produced_zero--relates_to--project_mypm.yml  preference_no_pytest_every_test_file_is--relates_to--project_mypm.yml
knowledge/projects/mypm/: project.md
knowledge/projects/mypm/nodes/: decision_capture_from_ai_sessions_is_guaranteed.md  decision_discover_the_knowledge_root_by_walking.md  decision_retrieval_is_lexical_first_semantic_embeddings.md  decision_review_fill_saves_evidence_backed_fields.md  decision_store_nodes_as_markdown_files_and.md  lesson_a_cwd_relative_default_root_made.md  lesson_bootstrap_on_scipy_typed_40_percent.md  lesson_the_free_bootstrap_pass_produced_zero.md  (+2 more)
myPM/: agents.py  claude.py  cli.py  constraints.py  distill.py  embeddings.py  githook.py  index.py  proposer.py  ranking.py  reflect.py  retriever.py  store.py  validator.py
myPM/schemas/: base.py  decision.py  lesson.py  pattern.py
myPM/templates/architecture/: relationships.md
mypm/: __init__.py  bootstrap.py  claude.py  cli.py  constraints.py  council.py  distill.py  embeddings.py  githook.py  index.py  metrics.py  models.py  observe.py  proposer.py  reflect.py  retriever.py  review.py  store.py  validator.py
mypm/schemas/: __init__.py  preference.py  project.py
mypm/templates/: CLAUDE.md  settings.json
mypm/templates/agents/: adversarial-reviewer.md  oss-maintainer.md  performance-engineer.md  principal-engineer.md  reflection-analyst.md
mypm/templates/architecture/: agents.md  core-model.md  philosophy.md  storage.md  success-metrics.md
mypm/templates/ci/: knowledge-validate.yml
scripts/: run_slice.py
tests/: run_all.py  test_bootstrap.py  test_claude.py  test_distill.py  test_githook.py  test_hardening.py  test_metrics.py  test_observe.py  test_ranking.py  test_review.py  test_semantic.py  test_slice.py  test_v04.py  test_validator.py
