[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mypm"
version = "0.1.0"
description = "Engineering knowledge operating system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
mypm = "myPM.cli:main"

[tool.setuptools]
packages = ["myPM", "myPM.schemas"]

[tool.setuptools.package-data]
myPM = [
    "templates/*.md",
    "templates/agents/*.md",
    "templates/architecture/*.md",
]