[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mypm"
version = "0.1.0"
description = "Engineering knowledge operating system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Local semantic retrieval (offline embeddings). Absent install => lexical seed.
semantic = ["sentence-transformers>=2.2"]
# Claude integration: LLM proposer + council runner. Absent install => rule-based.
ai = ["anthropic>=0.40"]

[project.scripts]
mypm = "myPM.cli:main"

[tool.setuptools]
packages = ["myPM", "myPM.schemas"]

[tool.setuptools.package-data]
myPM = [
    "templates/*.md",
    "templates/agents/*.md",
    "templates/architecture/*.md",
]