[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. "mypm" is taken on PyPI (an unrelated password
# manager), so the distribution ships as mypm-cli; the import package and the
# console command are still `mypm`. (Same pattern as beautifulsoup4 -> bs4.)
name = "mypm-cli"
version = "0.3.0"
description = "A git-native engineering memory: a typed knowledge graph of decisions, lessons, and patterns that AI assistants can recall"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pratham Nayak" }]
keywords = ["knowledge-graph", "engineering-memory", "ai-context", "claude", "decision-records"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Local semantic retrieval (offline embeddings). Absent install => lexical seed.
semantic = ["sentence-transformers>=2.2"]
# Claude integration: LLM proposer + council runner. Absent install => rule-based.
ai = ["anthropic>=0.40"]

[project.scripts]
mypm = "mypm.cli:main"

[tool.setuptools]
packages = ["mypm", "mypm.schemas"]

[tool.setuptools.package-data]
mypm = [
    "templates/*.md",
    "templates/agents/*.md",
    "templates/architecture/*.md",
]
